[package]
name = "lynk"
version = "0.1.0"
authors = ["Vikram B"]
edition = "2021"
description = "A general Libp2p based Network Layer implementation."

[lib]
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
base64url = "0.1.0"
ed25519-dalek = "1.0.1"
futures = "0.3.21"
libp2p = { version = "0.52.3", features = ["kad", "identify", "ping", "tcp", "mdns", "gossipsub", "autonat", "relay", "dcutr", "noise", "yamux", "dns", "metrics", "tokio", "macros", "quic", "serde"] }
log = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "sync", "macros"] }
rand = "0.8.5"
